fix: alignment issue & center docs

--- a/apps/docs/app/global.css
+++ b/apps/docs/app/global.css
@@ -30,4 +30,12 @@
   html {
     @apply scroll-smooth;
   }
+
+  /** Need to do this because fumadocs preset is overriding custom breakpoints. For: navbar, footer */
+  .max-w-container {
+    @apply !max-w-screen-xl md:!px-0;
+  }
+  .container {
+    @apply !max-w-screen-xl md:!px-0;
+  }
 }
